--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Noel Lawlor</h1>
         <p><em>Systems Administrator
             <strong><a href="http://steel.ie/">Duggan Steel Group</a></strong></em></p>
-        <p>I am systems administrartion in the IT Department. I enjoy photography and playing Racquetball.</p>
+        <p>I am systems administrator in the IT Department. I enjoy photography and playing Racquetball.</p>
       </td>
     </tr>
   </table>
