--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>Boys School Castlecomer</li>
     <li>Comunite School Castlecomer</li>
     <li>VTOS Kilkenny</li>
-    <li>IT Carlow</li>
+    <li>Institute of Technology Carlow</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
@@ -36,12 +35,40 @@
     </thead>
     <tbody>
       <tr>
+        <td>1990 - 1992</td>
+        <td>Apprentice Butcher SuperValu Castlecomer</td>
+      </tr>
+      <tr>
+        <td>1993 - 2001</td>
+        <td>Butcher Mallon & Sons Castleblayney</td>
+      </tr>
+      <tr>
+        <td>2000 - 2001</td>
+        <td>Contract Cleaner Castleblayney Cold Rooms</td>
+      </tr>
+      <tr>
+        <td>2002 - 2003</td>
+        <td>Year Traveling New Zealand & Australia</td>
+      </tr>
+      <tr>
         <td>2003 - 2010</td>
         <td>John Sisk & Sons</td>
       </tr>
       <tr>
-        <td>2010</td>
+        <td>2010 - 2013</td>
         <td>Pix4u Photograpy</td>
+      </tr>
+      <tr>
+        <td>2013 - 2017</td>
+        <td>Bachelor of Science (Honours) Information Technology Management</td>
+      </tr>
+      <tr>
+        <td>2017 - 2017</td>
+        <td>IT Administrator Hensen Pharmaceutical</td>
+      </tr>
+      <tr>
+        <td>2017 - 2020</td>
+        <td>IT Systems Administrator Duggan Steel Group</td>
       </tr>
     </tbody>
   </table>
